# nota-swc

bindings/binding_core_wasm/: Cargo.toml
bindings/swc_cli/: Cargo.toml
crates/swc/: Cargo.toml
crates/swc/src/config/: mod.rs
crates/swc_common/src/: input.rs
crates/swc_common/src/syntax_pos/: hygiene.rs
crates/swc_core/: Cargo.toml
crates/swc_ecma_ast/src/: expr.rs  lib.rs  nota.rs
crates/swc_ecma_codegen/src/: lib.rs  util.rs
crates/swc_ecma_lints/src/: lib.rs
crates/swc_ecma_minifier/src/compress/optimize/: sequences.rs
crates/swc_ecma_minifier/src/util/: size.rs
crates/swc_ecma_parser/: Cargo.toml
crates/swc_ecma_parser/src/: error.rs  lib.rs  macros.rs  token.rs
crates/swc_ecma_parser/src/lexer/: mod.rs  nota.rs  state.rs  tests.rs  util.rs
crates/swc_ecma_parser/src/lexer/nota/: mod.rs  token.rs
crates/swc_ecma_parser/src/parser/: expr.rs  input.rs  macros.rs  mod.rs  nota.rs  tests.rs  util.rs
crates/swc_ecma_parser/src/parser/nota/: mod.rs
crates/swc_ecma_quote_macros/src/ast/: expr.rs
crates/swc_ecma_transforms/: Cargo.toml
crates/swc_ecma_transforms/src/: lib.rs
crates/swc_ecma_transforms_compat/src/es2015/: destructuring.rs
crates/swc_ecma_transforms_nota/: Cargo.toml
crates/swc_ecma_transforms_nota/src/: lib.rs
crates/swc_ecma_utils/src/: lib.rs
crates/swc_ecma_visit/src/: lib.rs
crates/swc_estree_compat/src/babelify/: expr.rs
