[package]
edition = "2021"
name = "swc_ecma_transforms_nota"
version = "0.1.0"

[lib]
bench = false

[dependencies]
swc_ecma_transforms_base = {version = "0.130.7", path = "../swc_ecma_transforms_base"}
swc_ecma_visit           = {version = "0.93.2", path = "../swc_ecma_visit"}
swc_ecma_ast             = { version = "0.107.2", path = "../swc_ecma_ast" }
swc_common               = { version = "0.31.18", path = "../swc_common" }
swc_atoms                = { version = "0.5.8", path = "../swc_atoms" }
